--- a/src/partials/landing-how.html
+++ b/src/partials/landing-how.html
@@ -2,12 +2,12 @@
   <div class="row">
     <div class="small-12 columns">
       <h2 class="text-center global-title text-darker-gray">
-        Get published, get exposure, get paid
+        Our Process
       </h2>
     </div>
     <div class="small-12 columns">
       <h3 class="text-center global-subtitle text-dark-gray secondary-font">
-        Work with the best companies to share content tech lovers want to read
+        We work hard to find content that's perfect for your current and future audience.
       </h3>
     </div>
     <div class="medium-4 columns">
@@ -15,12 +15,12 @@
         <h6 class="step">
           Step 1
         </h6>
-        <img src="assets/img/icons/how-1.svg" alt="">
+        <img src="assets/img/icons/audience.svg" alt="">
         <h3 class="title">
-          Companies Notice You
+          Tell us who your audience is.
         </h3>
         <p class="information secondary-font text-dark-gray">
-          Tech companies digg what you’re writing
+          eg: Are your customers project managers or developers?
         </p>
       </div>
     </div>
@@ -29,12 +29,12 @@
         <h6 class="step">
           Step 2
         </h6>
-        <img src="assets/img/icons/how-2.svg" alt="">
+        <img src="assets/img/icons/marketing.svg" alt="">
         <h3 class="title">
-          Create/License Posts
+          We'll define the right content marketing strategy.
         </h3>
         <p class="information secondary-font text-dark-gray">
-          Write original content or license one of your posts
+          eg: We should be producing more posts about devops
         </p>
       </div>
     </div>
@@ -43,12 +43,12 @@
         <h6 class="step">
           Step 3
         </h6>
-        <img src="assets/img/icons/how-3.svg" alt="">
+        <img src="assets/img/icons/investment.svg" alt="">
         <h3 class="title">
-          Get Paid
+          Measure and Optimise your Content ROI
         </h3>
         <p class="information secondary-font text-dark-gray">
-          You get paid + your articles are featured on top tech blogs
+          eg: Are these visitors converting into signups?
         </p>
       </div>
     </div>
