--- a/src/partials/landing-what.html
+++ b/src/partials/landing-what.html
@@ -1,46 +1,33 @@
-<section class="what-we-do page-wrapper">
+<section class="what-we-do">
   <div class="wrapper first-wrapper">
     <div class="row align-middle">
-      <div class="medium-6 small-12 columns">
+      <div class="medium-7 small-12 columns">
         <div class="content-box">
           <h6 class="title">
             <img src="assets/img/icons/licensing.svg" alt="">
-            Licensing Existing Content
+            Our Pricing
           </h6>
           <h2 class="heading">
-            Monetize your blog posts (without terrible banner ads)
+            Why should you pay for content that doesn't bring traffic?
           </h2>
           <hr>
           <p class="information secondary-font">
-            Codeplace offers different licensing models, tailored to the needs of the company and the blogger. All of them work under the same premisse: you have awesome posts that tech enthusiasts love to read, companies want to feature them on their blog.
+            Typical content marketing agencies charge you 1000s of $s in flat fees and production comissions for content that is unproven to convert into visitors. We don't think that's fair. With Codeplace, you only pay when you get traffic.
           </p>
-          <button class="hollow button rounded" id="js-slide-to-form" href="#" type="button">KNOW HOW MUCH YOU CAN EARN</button>
+          <button class="hollow button" data-open="modal-form" type="button">KNOW MORE</button>
         </div>
       </div>
-      <div class="medium-6 small-12 columns hide-for-small-only">
-        <img src="assets/img/screenshots/licensing.jpg" alt="">
-      </div>
-    </div>
-  </div>
-  <div class="wrapper">
-    <div class="row align-middle">
-      <div class="medium-6 small-12 columns hide-for-small-only">
-        <img src="assets/img/screenshots/original.jpg" alt="">
-      </div>
-      <div class="medium-6 small-12 columns">
-        <div class="content-box">
-          <h6 class="title">
-            <img src="assets/img/icons/original.svg" alt="">
-            ORIGINAL CONTENT
-          </h6>
-          <h2 class="heading">
-            Write original posts
-          </h2>
-          <hr>
-          <p class="information secondary-font">
-            This means showing off your tech writing skills <em>plus</em> getting published on the blogs of some of the best companies in the world.
-          </p>
-          <!-- <button class="hollow button rounded" data-open="apply-modal" href="#">APPLY TO BECOME A WRITER</button> -->
+      <div class="medium-4 medium-offset-1 small-12 columns">
+        <div class="pricing-wrapper">
+        <h5>Get Traffic</h5>
+        <h3>$1</h3>
+        <p>per unique visitor</p>
+        <ul>
+          <li>Content Analytics</li>
+          <li>Audience Insights</li>
+          <li>Client Success Manager</li>
+          <li>24/7 Email and Phone Support</li>
+        </ul>
         </div>
       </div>
     </div>
