--- a/src/partials/landing-who.html
+++ b/src/partials/landing-who.html
@@ -1,58 +1,47 @@
-<section class="who">
+<section class="who gray-bg">
   <div class="row">
     <div class="small-12 columns">
       <h2 class="text-center global-title text-darker-gray">
-        Get published, get exposure, get paid
+        What can you expect
       </h2>
     </div>
     <div class="small-12 columns">
       <h3 class="text-center global-subtitle text-dark-gray secondary-font">
-        Work with the best companies to share content techies want to read about
+        Transparent ROI, Great Content, Great Traffic
       </h3>
     </div>
   </div>
   <div class="row">
-    <div class="medium-3 small-12 columns">
+    <div class="medium-4 small-12 columns text-center">
       <div class="wrapper">
-        <img src="assets/img/icons/developers.svg" alt="">
+        <img src="assets/img/icons/investment.svg" alt="">
         <h3 class="name">
-          Developers
+          Transparent ROI
         </h3>
         <p class="information secondary-font">
-          Share tutorials, think pieces, tips and guides about specific languages or development in general.
+          You'll be able to see which content is bringing you the best trafic.
         </p>
       </div>
     </div>
-    <div class="medium-3 small-12 columns">
+    <div class="medium-4 small-12 columns text-center">
       <div class="wrapper">
-        <img src="assets/img/icons/designers.svg" alt="">
+        <img src="assets/img/icons/content.svg" alt="">
         <h3 class="name">
-          UI / UX Designers
+          Great Content
         </h3>
         <p class="information secondary-font">
-          Spread your insights in the field of UI/UX and create amazing pieces that designers will love to share.
+          Your blog will be powered up with content that is proven to work with your audience.
         </p>
       </div>
     </div>
-    <div class="medium-3 small-12 columns">
+    <div class="medium-4 small-12 columns text-center">
       <div class="wrapper">
-        <img src="assets/img/icons/managers.svg" alt="">
+        <img src="assets/img/icons/traffic.svg" alt="">
         <h3 class="name">
-          Project Managers
+          Great Traffic
         </h3>
         <p class="information secondary-font">
-          Publish content that resonates among project managers and helps build better teams.
-        </p>
-      </div>
-    </div>
-    <div class="medium-3 small-12 columns">
-      <div class="wrapper">
-        <img src="assets/img/icons/tech.svg" alt="">
-        <h3 class="name">
-          Tech Enthusiasts
-        </h3>
-        <p class="information secondary-font">
-          Tech content doesn't need to be for developers only. Share pieces that tech enthusiasts will love to read about.
+          You’ll reach new audiences that matter to your brand’s vision.
         </p>
       </div>
     </div>
