--- a/src/partials/landing-hero.html
+++ b/src/partials/landing-hero.html
@@ -1,25 +1,18 @@
 <section class="landing-hero page-wrapper">
-  <div class="row">
-    <div class="small-12 medium-10 large-10 medium-offset-1 large-offset-1 columns">
+  <div class="row align-middle">
+    <div class="small-8 small-offset-2 columns text-center">
       <h1 class="tagline">
-       Show off your tech writing skills and get paid for it
+       tech blogging as a service
       </h1>
-      <h2 class="subtitle secondary-font">
-       We connect awesome companies in need of tech content with great bloggers.
+      <h2 class="subtitle">
+       You tell us who's your target customer. We’ll take care of your blog. That simple!
       </h2>
-      <div class="url-wrapper">
-        <h2 class="url-title">
-        Want to know how much your blog is worth?
-        </h2>
-        <form id="blogFormLanding">
-          <div class="input-group">
-            <input class="input-group-field" type="url" value="http://" />
-            <div class="input-group-button">
-              <input type="submit" class="success button" value="SHOW ME THE $$" />
-            </div>
-          </div>
-        </form>
-      </div>
+      <a data-open="modal-form" type="button" class="success button">Talk to us</a>
     </div>
   </div>
 </section>
+
+
+<div class="reveal landing-modal-form" id="modal-form" data-reveal>
+<div class="pipedriveWebForms" data-pd-webforms="https://pipedrivewebforms.com/form/ec66e595a870a0f4d62ceff24b317c59"><script src="https://pipedrivewebforms.com/webforms.min.js"></script></div>
+</div>
