--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -8,11 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codeplace</title>
     <link rel='shortcut icon' type='image/x-icon' href='http://i.imgur.com/I6dh5Ln.png' />
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700|Poppins:400,300,500,600,700" rel="stylesheet">
     <script src="https://pipedrivewebforms.com/webforms.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700|Raleway:300,500,600,800|Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
   </head>
-  <link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700' rel='stylesheet' type='text/css'>
   <body>
     <script src="{{root}}assets/js/app.js"></script>
     {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
