--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -904,3 +904,17 @@ body {
     margin-bottom: 0;
   }
 }
+
+.top-bar-right {
+    margin-left: auto;
+}
+.login-btn {
+    color: #fff;
+    border: 1px solid #fff;
+    padding: .5rem 1.7rem;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.login-btn:hover {
+    color: #fff;
+}
